# 6-Minute_Interview

./: Instructions.txt  package-lock.json
CSharp/: .gitignore  PhoneNumber.sln  README.md
CSharp/PhoneNumberLib/: PhoneNumber.cs
CSharp/PhoneNumberTests/: PhoneNumberTests.cs  PhoneNumberTests.csproj
Java/: .gitignore  README.md  pom.xml
Java/src/main/java/com/interview/: PhoneNumber.java
Java/src/test/java/com/interview/: PhoneNumberTest.java
JavaScript/: .gitignore  PhoneNumber.js  PhoneNumber.spec.js  README.md  jest.config.js  package-lock.json  package.json
Python/: .gitignore  PhoneNumber copy.py  PhoneNumber.py  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test_PhoneNumber.py
TypeScript/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  phone-number.test.ts  phone-number.ts  tsconfig.json  tsconfig.test.json
